--- a/s7_deployment/exercise_files/requirements.txt
+++ b/s7_deployment/exercise_files/requirements.txt
@@ -5,3 +5,6 @@ transformers >= 4.36.2
 opencv-python-headless
 pillow >= 10.2.0
 python-multipart >= 0.0.6
+functions-framework==3.*
+google-cloud-storage==2.14.0
+scikit_learn==1.3.2
